<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/app_G"
                style="@style/AppTheme.Title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryText">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_marginRight="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:text="@string/facebook"
                        android:onClick="ClickFb"
                        style="@style/AppTheme.Button"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_marginRight="@dimen/standard_margin"
                        android:layout_marginBottom="@dimen/standard_margin"
                        android:text="@string/messenger"
                        android:onClick="ClickMsg"
                        style="@style/AppTheme.Button"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:text="@string/internet"
                style="@style/AppTheme.PlayerTitle"/>

            <ImageView  style="@style/AppTheme.Separator.Horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/standard_margin"
                    android:text="@string/check_info_online"/>

                <Spinner
                    android:id="@+id/spinner_internet_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:minHeight="@dimen/minimal_length"
                    android:layout_margin="@dimen/standard_margin"
                    android:entries="@array/internet_connect"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:text="Gry:"
                style="@style/AppTheme.PlayerTitle"/>

            <ImageView  style="@style/AppTheme.Separator.Horizontal" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>