<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayingFieldActivity">

    <!--<LinearLayout
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="?attr/actionModeCloseDrawable"
            style="@style/AppTheme.Icon"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/options_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/options"
        style="@style/AppTheme.Separator.Horizontal" />-->

    <TextView
        android:id="@+id/goalkeeper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/AppTheme.Title"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/goalkeeper">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/bad_shot"
            android:onClick="ClickBadShot"
            style="@style/AppTheme.Button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/mishit"
            android:onClick="ClickMishit"
            style="@style/AppTheme.Button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/goal"
            android:onClick="ClickGoal"
            style="@style/AppTheme.Button" />
    </LinearLayout>


    <TextView
        android:id="@+id/shooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        style="@style/AppTheme.Title"/>

    <ImageView
        android:id="@+id/play_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/shooter"
        style="@style/AppTheme.Separator.Horizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/play_separator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/standard_margin"/>

            <ImageView
                style="@style/AppTheme.Separator.Vertical"/>

            <TextView
                android:id="@+id/order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/standard_margin"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>